--- a/_posts/2017-04-26-linux.markdown
+++ b/_posts/2017-04-26-linux.markdown
@@ -13,7 +13,7 @@ I love Linux, but there are so many different distributions. So how can I know i
 
 At first I came to [openSUSE](https://www.opensuse.org) Tumbleweed and GNOME wasn't default, but it was still easily changed during the installation. There were more packages available, however it still used `.rpm` packages. But I did learn something, I REALLY liked rolling releases.
 
-So I started looking for other rolling release distros and came across [Arch](https://www.archlinux.org). I had known about Arch for awhile however I had never really tried it as I never really considered myself as good enough to get it setup. But I just said what the hell, tried it, and failed. I got my internet working, GNOME installed, and everything seemed well until I tried to open the GNOME terminal. It kept crashing when I tried to open it, and switching to `tty2` would cause GNOME to crash and reset the x-server, putting me back into my GNOME login screen.
+So I started looking for other rolling release distros and came across [Arch](http://www.archlinux.org). I had known about Arch for awhile however I had never really tried it as I never really considered myself as good enough to get it setup. But I just said what the hell, tried it, and failed. I got my internet working, GNOME installed, and everything seemed well until I tried to open the GNOME terminal. It kept crashing when I tried to open it, and switching to `tty2` would cause GNOME to crash and reset the x-server, putting me back into my GNOME login screen.
 
 By this point I decided maybe Arch wasn't for me, and just saw that [Ubuntu 17.04](https://www.ubuntu.com) had just released. So I decided to give it a try because with it just releasing the packages would be up to date, [Ubuntu GNOME](https://ubuntugnome.org) is an official flavor, and Ubuntu usually has the most support for packages. I got it installed and working but something still seemed lacking, I would run `sudo apt update` and there would be none. I missed the rolling releases.
 
